[package]
name = "reelfun-contract"
version = "0.1.0"
description = "ReelFun Smart Contract with Stake-to-Prompt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reelfun_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
once_cell = "1.19.0"

[dev-dependencies]
proptest = "1.0"
